--- a/public/css/style.css
+++ b/public/css/style.css
@@ -330,6 +330,10 @@ h6{ font-size:16px;};
     .right-column{
         justify-content: center;
     }
+
+    .social-text{
+        margin-top:50px;
+    }
 }
 
 
